--- a/src/styles/searchdropdown.scss
+++ b/src/styles/searchdropdown.scss
@@ -63,7 +63,7 @@
 				font-weight: 500;
 				padding: 0px;
 				@include forMobile() {
-					font-size: 15px;
+					font-size: $font-size-11;
 				}
 				&::placeholder {
 					color: $secondary-color-4;
@@ -121,8 +121,8 @@
         }
 		
 				@include forMobile() {
-					font-size: rem(15px);
-					line-height: rem(15px);
+					font-size: rem(16px);
+					line-height: rem(16px);
 					padding: 15px;
 				}
 		
